[package]
name = "wechat-crypto"
version = "0.1.0"
edition = "2021"
description = "Wechat / Wecom Data encrypt / decrypt"
license = "MIT"
repository = "https://github.com/hjin-me/wechat-proxy"
authors = ["HJin"]
keywords = ["wechat", "crypto", "signature", "sdk"]
exclude = ["tests/*"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
anyhow = "1.0.71"
base64 = "0.21.0"
byteorder = "1.4.3"
cbc = "0.1.2"
rand = "0.8.5"
sha1 = "0.10.5"
tracing = "0.1.37"
serde = { version = "1.0.148", features = ["derive"] }
